--- a/productpage.html
+++ b/productpage.html
@@ -15,19 +15,19 @@
     <div class="grid1">
         <div class="gridie">Product 1
 
-            <div><img src="images/p1.jpg" width="300px"></div>
+            <div><img src="images/p1.jpg" width="300px" class="p1"></div>
             <span class="addbutton"><a href="cart2.html">Add to cart</a></span>
         </div>
         <div class="gridie">Product 2
-            <div><img src="images/p2.jpg" width="300px" height="300px"></div>
+            <div><img src="images/p2.jpg" width="300px" height="300px" class="p2"></div>
             <span class="addbutton"><a href="cart2.html">Add to cart</a></span>
         </div>
         <div class="gridie">Product 3
-            <div><img src="images/p3.jpg" width="300px" height="300px"></div>
+            <div><img src="images/p3.jpg" width="300px" height="300px" class="p3"></div>
             <span class="addbutton"><a href="cart2.html">Add to cart</a></span>
         </div>
         <div class="gridie">Product 4
-            <div><img src="images/p4.jpg" width="300px" height="300px"></div>
+            <div><img src="images/p4.jpg" width="300px" height="300px" class="p4"></div>
             <span class="addbutton"><a href="cart2.html">Add to cart</a></span>
         </div>
     </div>
