--- a/cart2.html
+++ b/cart2.html
@@ -77,7 +77,7 @@
             <div>Product ID:-PX112</div>
             <div class="return ret1"><a href="">Buy again</a></div>
             <div class="return ret2"><a href="">Return product</a></div>
-            <div class="return ret3"><a href="">Excchange product</a></div>
+            <div class="return ret3"><a href="">Exchange product</a></div>
             <div>
                 <div style="font-size: 30px;">Product 3</div>
                 <img src="images/p3.jpg" width="140px">
@@ -91,7 +91,7 @@
             <div>Product ID:-PX332</div>
             <div class="return ret1"><a href="">Buy again</a></div>
             <div class="return ret2"><a href="">Return product</a></div>
-            <div class="return ret3"><a href="">Excchange product</a></div>
+            <div class="return ret3"><a href="">Exchange product</a></div>
 
 
 
