--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
     </nav>
     <div class="bigimage">
-        <h1 class="bigfont">WE BRINGS YOU THE BEST QUALITY</h1>
+        <h1 class="bigfont">BRINGS YOU THE BEST QUALITY</h1>
         
         <h3 class="bigfont2">| CREATIVE & EXPERIENCED |</h3>
         <button id="button1"><a href="cart2.html">Cart</a></button>
